--- a/style.css
+++ b/style.css
@@ -39,6 +39,26 @@ body {
     font-size: 1.2rem;
 }
 
-.buttons-container {
+.button-container {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: calc(100vh - (15vh + 60vh + 10vh));
+    padding: 1rem;
+}
+
+button {
+    background-color: #808080;
+    width: 16rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.5rem;
+    color: #d3d3d3;
+    font-size: 1.5rem;
+}
+
+button:hover {
+    color: #ffffff;
+    cursor: pointer;        /*Tried for first time to change cursor icon to hand pointer on hover*/
 }
